--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Weather App</title>
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>Weather App</h1>
@@ -13,6 +13,6 @@
     </form>
     <div id="weather"></div>
     <a href="https://openweathermap.org" target="_blank">OpenWeatherMap</a>
-    <script src="JS/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
